[package]
name = "datagen"
version = "0.1.0"
authors = ["Mariano Guerra <mariano@marianoguerra.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.6.0"
futures = "0.1"
futures-timer = "0.1"
log = "0.4"
env_logger = "0.6"
clap = "2.33.0"
rand = "0.7.2"
csv = "1.1.1"
serde = "1.0.103"
serde_derive = "1.0.103"
chrono = "0.4.10"
